# clDNN

./: .gitignore  CMakeCompilerLinkerOpts.txt  CMakeLists.txt  README.md  activation_8h_source.html  activation_8hpp_source.html  annotated.html  annotated_dup.js  batch__norm_8h_source.html  batch__norm_8hpp_source.html  c1.html  c2.html  c3.html  c4.html  c5.html  c6.html  c7.html  c8.html  chapter__1_8cpp_source.html  chapter__2_8cpp_source.html  chapter__3_8cpp_source.html  chapter__4_8cpp_source.html  chapter__5_8cpp_source.html  chapter__6_8cpp_source.html  chapter__7_8cpp_source.html  chapter__8_8cpp_source.html  classcldnn_1_1build__options-members.html  classcldnn_1_1build__options.html  classcldnn_1_1build__options.js  classcldnn_1_1details_1_1dim__vec__kind__init-members.html  classcldnn_1_1details_1_1dim__vec__kind__init.html  classcldnn_1_1details_1_1dim__vec__kind__init.js  classcldnn_1_1error-members.html  classcldnn_1_1error.html  classcldnn_1_1error.js  classcldnn_1_1error__coll__graph.map  classcldnn_1_1error__coll__graph.md5  classcldnn_1_1error__inherit__graph.md5  classcldnn_1_1half__impl-members.html  classcldnn_1_1half__impl.html  (+847 more)
src/: CMakeLists.txt  activation.cpp  activation_grad.cpp  add_required_reorders.cpp  apply_adam.cpp  arg_max_min.cpp  average_unpooling.cpp  batch_norm.cpp  batch_norm_grad.cpp  border.cpp  broadcast.cpp  cldnn.cpp  concatenation.cpp  condition.cpp  constants_propagator.cpp  contract.cpp  convolution.cpp  convolution_grad_weights.cpp  crop.cpp  custom_gpu_primitive.cpp  data.cpp  deconvolution.cpp  detection_output.cpp  eltwise.cpp  eltwise_shrinking.cpp  embed.cpp  engine.cpp  error_handler.cpp  event.cpp  fully_connected.cpp  fully_connected_grad_input.cpp  fully_connected_grad_weights.cpp  fused_conv_bn_scale.cpp  fused_conv_eltwise.cpp  gemm.cpp  generic_layer.cpp  index_select.cpp  input_layout.cpp  kernel_selector_helper.cpp  layout_optimizer.cpp  (+44 more)
src/caps/public/: gpu_devices.inc
src/gpu/: activation_gpu.cpp  activation_grad_gpu.cpp  apply_adam_gpu.cpp  arg_max_min_gpu.cpp  average_unpooling_gpu.cpp  batch_norm_gpu.cpp  batch_norm_grad_gpu.cpp  border_gpu.cpp  broadcast_gpu.cpp  command_queues_builder.cpp  command_queues_builder.h  concatenation_gpu.cpp  condition_gpu.cpp  configuration.cpp  contract_gpu.cpp  convolution_gpu.cpp  convolution_grad_weights_gpu.cpp  crop_gpu.cpp  custom_gpu_primitive_gpu.cpp  deconvolution_gpu.cpp  definitions.cl  detection_output_cpu.cpp  detection_output_gpu.cpp  devices.inc  eltwise_gpu.cpp  embed_gpu.cpp  engine_info.cpp  engine_info.h  events_pool.h  events_waiter.h  fully_connected_gpu.cpp  fully_connected_grad_input_gpu.cpp  fully_connected_grad_weights_gpu.cpp  fused_conv_bn_scale_gpu.cpp  fused_conv_eltwise_gpu.cpp  gemm_gpu.cpp  generic_layer_gpu.cpp  index_select_gpu.cpp  kd_selector.h  kernel.cpp  (+47 more)
src/gpu/cache/: cache.cpp  cache.h  cache_types.h  common_types.h  cost_model.cpp  cost_model.h  gpu_compiler.cpp  gpu_compiler.h  gpu_linker.cpp  gpu_linker.h  kernel_manager.cpp  kernel_manager.h  manager_types.h  persistent_cache.cpp  persistent_cache.h  primitive_db.cpp  primitive_db.h  primitive_db_gen.py  primitive_selector.cpp  primitive_selector.h  serialization.cpp  serialization.h
src/gpu/cache/kernels/: Convolution_GPU_YXFB_YXIO.naive.cl  batch_norm_gpu.cl  batch_norm_use_global_stats_gpu.cl  concatenation_gpu_depth_bfyx.optimized.cl  concatenation_gpu_depth_bfyx_no_padding.optimized.cl  concatenation_gpu_depth_yxfb.optimized.cl  concatenation_gpu_spatial.naive.cl  convolution_gpu_bfyx_os_iyx_osv16.optimized.cl  convolution_gpu_yxfb_oiyx.naive.cl  convolution_gpu_yxfb_yxio_b16.optimized.cl  convolution_gpu_yxfb_yxio_b16_fp16.cl  convolution_gpu_yxfb_yxio_b1_block.optimized.cl  convolution_gpu_yxfb_yxio_b1_block_multiple_x.optimized.cl  convolution_gpu_yxfb_yxio_b8.optimized.cl  convolution_gpu_yxfb_yxio_fp16.naive.cl  crop_gpu.cl  deconvolution_gpu_bfyx_oiyx.naive.cl  deconvolution_gpu_bfyx_yxio.naive.cl  deconvolution_gpu_yxfb_oiyx.naive.cl  deconvolution_gpu_yxfb_yxio.naive.cl  eltwise_gpu.cl  eltwise_gpu_bfyx.cl  eltwise_gpu_vload8.cl  fully_connected_gpu_bx_bs_x_bsv16_b1.optimized.cl  fully_connected_gpu_bx_xb_from_fyx.naive.cl  fully_connected_gpu_bx_xb_from_fyxb.naive.cl  fully_connected_gpu_xb_bs_xs_xsv8_bsv16_vload.optimized.cl  fully_connected_gpu_xb_bs_xs_xsv8_bsv8_vload.optimized.cl  fully_connected_gpu_xb_bx.naive.cl  fully_connected_gpu_xb_bx_b8.optimized.cl  fully_connected_gpu_xb_xb.naive.cl  fully_connected_gpu_xb_xb_b8_x8.optimized.cl  fully_connected_gpu_xb_xb_b8_x8_vload.optimized.cl  fully_connected_gpu_xb_xb_block_fp16.optimized.cl  fully_connected_gpu_yxfn.naive.cl  (+40 more)
src/graph_optimizer/: add_required_reorders.cpp  add_reshape_to_primitives.cpp  eltwise_remove_stride.cpp  eltwise_shrinking.cpp  graph_initializations.cpp  handle_input_padding.cpp  handle_reshape.cpp  post_input_reorder.cpp  post_optimize_weights.cpp  pre_optimize_bias.cpp  prep_opt_depthwise_sep_post.cpp  prepare_buffer_fusing.cpp  prepare_depthwise_sep_opt.cpp  prepare_padding.cpp  prepare_primitive_fusing.cpp  propagate_constants.cpp  remove_redundant_reorders.cpp  reorder_inputs.cpp  trim_to_outputs.cpp
src/include/: activation_grad_inst.h  activation_inst.h  api_impl.h  apply_adam_inst.h  arg_max_min_inst.h  average_unpooling_inst.h  batch_norm_grad_inst.h  batch_norm_inst.h  border_inst.h  broadcast_inst.h  concatenation_inst.h  condition_inst.h  contract_inst.h  convolution_grad_weights_inst.h  convolution_inst.h  crop_inst.h  custom_gpu_primitive_inst.h  data_inst.h  deconvolution_inst.h  detection_output_inst.h  eltwise_inst.h  embed_inst.h  engine_impl.h  error_handler.h  event_impl.h  fully_connected_grad_input_inst.h  fully_connected_grad_weights_inst.h  fully_connected_inst.h  fused_conv_bn_scale_inst.h  fused_conv_eltwise_inst.h  gemm_inst.h  generic_layer.hpp  generic_layer_inst.h  implementation_map.h  index_select_inst.h  input_layout_inst.h  internal_primitive.h  internal_primitive_type_base.h  json_object.h  kernel_selector_helper.h  (+48 more)
src/serialization/: serialization.h
(+988 files in other folders)
